# product-decision-compiler

./: .dockerignore  .env.example  .gitignore  .mailmap  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.product-agent-live  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: builder_agent.md  product_agent.md  product_customer_agent.md  verifier_agent.md
company/: charter.md  founder_briefing_template.md  operating_rules.md
docs/: .nojekyll  index.html
docs/demo/: index.html
docs/milestones/: product-agent-v0.1.md
docs/public/: product-agent-v0.1-public.md  product-decision-compiler.md
evals/studio_agents/fixtures/: product_advisory.v1.json
products/decision_compiler/: acceptance_criteria.yaml  architecture.md  eval_plan.md  implementation_plan.md  product_brief.md  threat_model.md  user_journeys.md
products/email_agent/: acceptance_criteria.yaml  architecture.md  eval_plan.md  implementation_plan.md  product_brief.md  threat_model.md  user_journeys.md
products/studio_agents/: README.md  architecture.md  eval_plan.md  implementation_plan.md  phase_2b_prompt.md  threat_model.md
src/ai_native_studio/: __init__.py
src/ai_native_studio/product_agent_live/: __init__.py  activity_format.py  config.py  install.py  linear_api.py  logging_utils.py  models.py  product_briefs.py  server.py  service.py  storage.py  tokens.py
src/ai_native_studio/product_agent_proof/: approval.py  dedup.py  evaluation.py  intelligence.py  intelligence_demo.py  models.py  policy.py  providers.py  role_config.py  service.py
src/ai_native_studio/product_agent_proof/config/: product_agent.v1.json  product_agent_prompt.v1.md
src/ai_native_studio/product_decision_compiler/: __init__.py  compiler.py  conformance.py  contracts.py  demo.py  fixtures.py  integrations.py  proof.py
src/ai_native_studio/product_decision_compiler/fixtures/: alignment_proof.v1.json
tests/product_agent_live/: __init__.py  test_live_service.py  test_product_briefs.py  test_storage.py
tests/product_agent_proof/: __init__.py  test_intelligence.py  test_service.py
tests/product_decision_compiler/: __init__.py  test_compiler.py  test_conformance.py  test_contracts.py  test_proof.py
workflows/: feature_lifecycle.md
