[project]
name = "ai-native-studio"
version = "0.1.0"
description = "AI-native product-development operating system for a solo founder."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography==46.0.3",
  "google-cloud-firestore>=2.21",
  "openai>=2.0,<3",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
product-agent-demo = "ai_native_studio.product_agent_proof.demo:main"
product-agent-intelligence-demo = "ai_native_studio.product_agent_proof.intelligence_demo:main"
product-agent-server = "ai_native_studio.product_agent_proof.server:main"
product-agent-live-server = "ai_native_studio.product_agent_live.server:main"

[tool.setuptools.package-data]
"ai_native_studio.product_agent_proof" = ["config/*.json", "config/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
