[project]
name = "product-decision-compiler"
version = "0.1.0"
description = "Compile approved product decisions into inspectable delivery checks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
live = [
  "cryptography==49.0.0",
  "google-cloud-firestore>=2.21",
  "openai>=2.0,<3",
]

[project.urls]
Demo = "https://czzzry.github.io/product-decision-compiler/"
Repository = "https://github.com/czzzry/product-decision-compiler"
Issues = "https://github.com/czzzry/product-decision-compiler/issues"

[project.scripts]
product-agent-demo = "ai_native_studio.product_agent_proof.demo:main"
product-agent-intelligence-demo = "ai_native_studio.product_agent_proof.intelligence_demo:main"
product-agent-server = "ai_native_studio.product_agent_proof.server:main"
product-agent-live-server = "ai_native_studio.product_agent_live.server:main"
product-decision-compiler-demo = "ai_native_studio.product_decision_compiler.demo:main"
product-decision-compiler-integrations-demo = "ai_native_studio.product_decision_compiler.integration_demo:main"

[tool.setuptools.package-data]
"ai_native_studio.product_agent_proof" = ["config/*.json", "config/*.md"]
"ai_native_studio.product_decision_compiler" = ["fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
